@@ -14,6 +14,9 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.1
   -  Fixed broken Escape chars if classes were disabled
+  -  Improvements to language files (BenBE, milian)
+     * Added MinSpareThread\MaxSpareThreads to Apache highlighter (BenBE)
+     * Added new Keyword group for APT sources.list highlighter (BenBE)
 Version 1.0.8
   -  Added language files
      * APT sources.list (milian)
